[package]
name = "logic-circus"
version = "0.2.0"
authors = ["Gil Rtr <glrtr2003@gmail.com>"]
edition = "2018"
description = "Open source logic circuit simualtor written in Rust."
documentation = "https://docs.rs/logic-circus"
readme = "README.md"
homepage = "https://github.com/GilRtr/logic-circus"
repository = "https://github.com/GilRtr/logic-circus"
license = "WTFPL"
license-file = "LICENSE"
keywords = ["logic-gates", "circuit"]
categories = ["mathematics", "simulation"]
